--- a/template/header.html
+++ b/template/header.html
@@ -1,43 +1,68 @@
-<div class="top-bar">
-  <!-- Logo -->
-  <div class="logo">
-    <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
-    <h1 class="logo__title"></h1>
-  </div>
+<div class="container">
+  <div class="top-bar">
+    <!-- Logo -->
+    <a href="./" class="logo">
+      <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
+      <h1 class="logo__title">grocerymart</h1>
+    </a>
+    <!-- Nav bar  -->
 
-  <!-- Nav bar  -->
-  <nav class="navbar">
-    <ul>
-      <li>
-        <a href="" class="navbar__link">
-          Departments
-          <img
-            src="./assets/icons/arrow-down.svg"
-            alt=""
-            class="navbar__arrow"
-          />
-        </a>
-      </li>
-      <li>
-        <a href="" class="navbar__link">
-          Grocery
-          <img
-            src="./assets/icons/arrow-down.svg"
-            alt=""
-            class="navbar__arrow"
-          />
-        </a>
-      </li>
-      <li>
-        <a href="" class="navbar__link">
-          Beauty
-          <img
-            src="./assets/icons/arrow-down.svg"
-            alt=""
-            class="navbar__arrow"
-          />
-        </a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+      <ul class="navbar__list">
+        <li>
+          <a href="" class="navbar__link">
+            Departments
+            <img
+              src="./assets/icons/arrow-down.svg"
+              alt=""
+              class="navbar__arrow icon"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" class="navbar__link">
+            Grocery
+            <img
+              src="./assets/icons/arrow-down.svg"
+              alt=""
+              class="navbar__arrow icon"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="" class="navbar__link">
+            Beauty
+            <img
+              src="./assets/icons/arrow-down.svg"
+              alt=""
+              class="icon navbar__arrow"
+            />
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="top-act">
+      <div class="top-act__group">
+        <button class="top-act__btn top-act__btn--search">
+          <img src="./assets/icons/search.svg" alt="" class="top-act__icon icon" />
+        </button>
+      </div>
+
+      <div class="top-act__group">
+        <button class="top-act__btn">
+          <img src="./assets/icons/heart.svg" alt="" class="top-act__icon icon" />
+          <span class="top-act__title">03</span>
+        </button>
+
+        <div class="top-act__separate"></div>
+
+        <button class="top-act__btn">
+          <img src="./assets/icons/shopping.svg" alt="" class="top-act__icon icon" />
+          <span class="top-act__title">$65.42</span>
+        </button>
+      </div>
+
+      <img src="./assets/img/avatar.jpg" alt="" class="top-act__avatar" />
+    </div>
+  </div>
 </div>
