--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,3 +1,5 @@
+@use "../abstract";
+
 @mixin widthHeight($width, $height) {
   width: $width;
   height: $height;
@@ -6,12 +8,32 @@
 .logo {
   display: flex;
   align-items: center;
-    gap: 1.4rem;
+  gap: 1.4rem;
+
+  @include abstract.breakpoint(sm) {
+    
+  }
+
+  @include abstract.breakpoint(lg) {
+    gap: 1rem;
+    margin-left: 3.9rem;
+  }
+
   &__title {
     @include widthHeight(14.4rem, 3.2rem);
     color: var(--text-color);
     font-size: 2.2rem;
     font-weight: 700;
     line-height: 145.455%;
+
+    @include abstract.breakpoint(lg) {
+      font-size: 1.8rem;
+    }
+  }
+
+  &__img {
+    @include abstract.breakpoint(lg) {
+      @include widthHeight(2.4rem, 2.4rem);
+    }
   }
 }
