--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -2,7 +2,7 @@ html.dark {
   --text-color: #fff;
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
     saturate(6510%) hue-rotate(150deg) brightness(133%) contrast(121%);
-
+  --body-bg-color: #292e39;
   --header-bg-color: #171c28;
   --top-act-bg-group: #292e39;
   --top-act-shadow-avatar: rgba(0, 0, 0, 0.2);
