--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1214,6 +1214,8 @@ html {
   --top-act-shadow-avatar: rgba(0, 0, 0, 0.08);
   --top-act-shadow-btn: rgba(237, 237, 246, 0.2);
   --top-act-separate: #ededf6;
+  --dropdown-bg-color: #fff;
+  --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
 }
 @media (max-width: 575.98px) {
   html {
@@ -1231,6 +1233,10 @@ html.dark {
   --top-act-shadow-avatar: rgba(0, 0, 0, 0.2);
   --top-act-shadow-btn: rgba(0, 0, 0, 0.2);
   --top-act-separate: #ededf6;
+  --dropdown-bg-color: #2f3441;
+  --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
+  --dropdown-arrow-color: brightness(0) saturate(100%) invert(18%) sepia(8%)
+    saturate(1462%) hue-rotate(186deg) brightness(94%) contrast(92%);
 }
 
 .top-act__btn, .top-act__group, .top-act, .navbar__link, .navbar__list, .top-bar {
@@ -1244,6 +1250,7 @@ html.dark {
 
 .top-bar {
   padding: 3rem 0rem;
+  position: relative;
 }
 @media (max-width: 575.98px) {
   .top-bar {
@@ -1278,11 +1285,10 @@ html.dark {
     display: none;
   }
 }
-.navbar__list {
-  gap: 3rem;
-}
 .navbar__link {
+  height: 5rem;
   gap: 0.6rem;
+  padding: 0rem 1.5rem;
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 146.667%;
@@ -1291,6 +1297,15 @@ html.dark {
 .navbar__arrow {
   width: 1.2rem;
   height: 1.2rem;
+}
+.navbar__item:first-child a {
+  padding-left: 0;
+}
+.navbar__item:last-child a {
+  padding-right: 0;
+}
+.navbar__item:hover .drop-down {
+  display: block;
 }
 
 .top-act {
@@ -1381,6 +1396,28 @@ html.dark {
     width: 2.4rem;
     height: 2.4rem;
   }
+}
+
+.drop-down {
+  position: absolute;
+  left: 0;
+  padding-top: 5.4rem;
+  display: none;
+}
+.drop-down__inner {
+  position: relative;
+  border-radius: 2rem;
+  padding: 3rem;
+  background: var(--dropdown-bg-color);
+  box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
+}
+.drop-down__inner::before {
+  position: absolute;
+  content: url("/assets/icons/dropdown-arrow.svg");
+  top: -1.3rem;
+  left: var(--arrow-left-pos);
+  transform: translateX(-50%);
+  filter: var(--dropdown-arrow-color);
 }
 
 /*# sourceMappingURL=main.css.map */
