--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -18,4 +18,6 @@ html {
   //dropdown
   --dropdown-bg-color: #fff;
   --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
+  --top-menu-border: #d2d1d6;
+  --menu-column-action: brightness(0) saturate(100%) invert(7%) sepia(14%) saturate(4579%) hue-rotate(221deg) brightness(91%) contrast(94%);;
 }
