--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,8 +1,9 @@
 .drop-down {
   position: absolute;
   left: 0;
+  width: min(124rem, 100%);
   padding-top: 5.4rem;
-  display: none;
+  // display: none;
 
   &__inner {
     position: relative;
@@ -10,14 +11,107 @@
     padding: 3rem;
     background: var(--dropdown-bg-color);
     box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
+    height: min(58.2rem, 100vh - 15.8rem);
+    overflow: auto;
 
     &::before {
-        position: absolute;
-        content: url("/assets/icons/dropdown-arrow.svg");
-        top: -1.3rem;
-        left: var(--arrow-left-pos);
-        transform: translateX(-50%);
-        filter: var(--dropdown-arrow-color);
+      position: absolute;
+      content: url("../icon/dropdown-arrow.svg");
+      top: -1.3rem;
+      left: var(--arrow-left-pos);
+      transform: translateX(-50%);
+      filter: var(--dropdown-arrow-color);
+    }
+  }
+}
+
+.top-menu__details--box {
+  display: flex;
+  justify-content: space-between;
+  width: min(82.5rem, 100%);
+}
+
+.top-menu {
+  display: flex;
+  height: 100%;
+
+  &__main {
+    width: min(29.2rem, 100%);
+    height: 100%;
+    border-right: 1px solid var(--top-menu-border);
+  }
+
+  &__details--inner {
+    display: flex;
+    flex-direction: column;
+    margin-left: 3rem;
+    height: 100%;
+
+    &--ml {
+      margin-left: 0;
+    }
+  }
+}
+
+.menu-column {
+  display: flex;
+  gap: 1.4rem;
+  max-width: 26.2rem;
+
+  &__icon {
+    position: relative;
+    width: 3.3rem;
+
+    &--shape {
+      position: absolute;
+      left: 0;
+    }
+
+    &--img {
+      width: 1.8rem;
+      height: 1.8rem;
+      position: absolute;
+      right: 0;
+      top: 1.5rem;
+      filter: var(--menu-column-action);
+    }
+  }
+
+  &__title {
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 150%; /* 150% */
+    margin-bottom: 2.6rem;
+    color: var(--menu-color-text);
+  }
+
+  &__list {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 142.857%;
+
+    &--mb {
+      margin-bottom: 1.4rem;
+      color: var(--menu-color-text);
+    }
+  }
+}
+
+.details-column {
+  display: flex;
+  gap: 1.4rem;
+  max-width: 26.2rem;
+  margin-bottom: 3rem;
+
+  &__list {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 142.857%;
+    margin-bottom: 1.4rem;
+    color: var(--menu-color-text);
+
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 }
