--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -14,4 +14,8 @@ html.dark {
   --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(18%) sepia(8%)
     saturate(1462%) hue-rotate(186deg) brightness(94%) contrast(92%);
+  --top-menu-border: #171c28;
+  --menu-column-action: brightness(0) saturate(100%) invert(100%) sepia(97%)
+    saturate(489%) hue-rotate(254deg) brightness(110%) contrast(97%);
+  --menu-color-text: #b9babe;
 }
