--- a/templates/header.html
+++ b/templates/header.html
@@ -25,9 +25,250 @@
 
           <div class="drop-down">
             <div class="drop-down__inner">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Cupiditate possimus, accusamus numquam perferendis vitae fugit ea
-              reprehenderit necessitatibus rem natus!
+              <div class="top-menu">
+                <div class="top-menu__main">
+                  <div class="menu-column">
+                    <div class="menu-column__icon">
+                      <img
+                        src="./assets/icons/dropdown-shape-circle.svg"
+                        alt=""
+                        class="menu-column__icon--shape"
+                      />
+                      <img
+                        src="./assets/icons/dropdown-menu.svg"
+                        alt=""
+                        class="menu-column__icon--img"
+                      />
+                    </div>
+                    <nav class="menu-column__content">
+                      <h3 class="menu-column__title">All Departments</h3>
+                      <ul class="menu-column__list">
+                        <li class="menu-column__list--mb">
+                          <a href="">Savings & Featured Shops</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Electronics</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Clothing, Shoes & Accessories</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Home, Furniture & Appliances</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Toys & Video Games</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Home Improvement</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Baby</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Household Essentials</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Personal Care</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Patio & Garden</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Sports & Outdoors</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Gift Cards</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Auto, Tires and Industrial</a>
+                        </li>
+                        <li class="menu-column__list--mb">
+                          <a href="">Movies, Music & Books</a>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
+                <div class="top-menu__details--box">
+                  <!-- Col 1 -->
+                  <div class="top-menu__details">
+                    <div class="top-menu__details--inner">
+                      <!-- col-inner-1 -->
+                      <div class="details-column">
+                        <div class="menu-column__icon">
+                          <img
+                            src="./assets/icons/dropdown-detail-square.svg"
+                            alt=""
+                            class="menu-column__icon--shape"
+                          />
+                          <img
+                            src="./assets/icons/dropdown-detail-watch.svg"
+                            alt=""
+                            class="menu-column__icon--img"
+                          />
+                        </div>
+                        <nav class="menu-column__content">
+                          <h3 class="menu-column__title">TV & Video</h3>
+                          <ul class="menu-column__list">
+                            <li class="details-column__list">Shop all TVs</li>
+                            <li class="details-column__list">TVs by Size</li>
+                            <li class="details-column__list">Smart TVs</li>
+                            <li class="details-column__list">Roku TVs</li>
+                            <li class="details-column__list">Streaming</li>
+                            <li class="details-column__list">
+                              TV Mounts & Accessories
+                            </li>
+                            <li class="details-column__list">
+                              DVD & Blu-Ray Players
+                            </li>
+                          </ul>
+                        </nav>
+                      </div>
+                      <!-- col-inner-2 -->
+                      <div class="details-column">
+                        <div class="menu-column__icon">
+                          <img
+                            src="./assets/icons/dropdown-detail-star.svg"
+                            alt=""
+                            class="menu-column__icon--shape"
+                          />
+                          <img
+                            src="./assets/icons/dropdown-detail-watch.svg"
+                            alt=""
+                            class="menu-column__icon--img"
+                          />
+                        </div>
+                        <nav class="menu-column__content">
+                          <h3 class="menu-column__title">
+                            Wearable Technology
+                          </h3>
+                          <ul class="menu-column__list">
+                            <li class="details-column__list">Galaxy Watch</li>
+                            <li class="details-column__list">Apple Watch</li>
+                            <li class="details-column__list">
+                              Fitness Trackers
+                            </li>
+                            <li class="details-column__list">
+                              Virtual Reality
+                            </li>
+                            <li class="details-column__list">Headphones</li>
+                          </ul>
+                        </nav>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Col 2 -->
+                  <div class="top-menu__details">
+                    <div class="details-column">
+                      <div class="menu-column__icon">
+                        <img
+                          src="./assets/icons/dropdown-detail-triangle.svg"
+                          alt=""
+                          class="menu-column__icon--shape"
+                        />
+                        <img
+                          src="./assets/icons/dropdown-detail-screen.svg"
+                          alt=""
+                          class="menu-column__icon--img"
+                        />
+                      </div>
+                      <nav class="menu-column__content">
+                        <h3 class="menu-column__title">Computers</h3>
+                        <ul class="menu-column__list">
+                          <li class="details-column__list">
+                            Shop All Computers
+                          </li>
+                          <li class="details-column__list">Laptops</li>
+                          <li class="details-column__list">PC Gaming</li>
+                          <li class="details-column__list">Monitors</li>
+                          <li class="details-column__list">Chromebook</li>
+                          <li class="details-column__list">Printers & Ink</li>
+                          <li class="details-column__list">Shop all TVs</li>
+                          <li class="details-column__list">
+                            Computer Accessories
+                          </li>
+                          <li class="details-column__list">Desktops</li>
+                          <li class="details-column__list">Tax Software</li>
+                          <li class="details-column__list">
+                            Computer Software
+                          </li>
+                          <li class="details-column__list">PC Finder</li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                  <!-- Col 3 -->
+                  <div class="top-menu__details">
+                    <div class="top-menu__details--inner top-menu__details--inner--ml">
+                      <!-- col-inner-1 -->
+                      <div class="details-column">
+                        <div class="menu-column__icon">
+                          <img
+                            src="./assets/icons/dropdown-detail-moon.svg"
+                            alt=""
+                            class="menu-column__icon--shape"
+                          />
+                          <img
+                            src="./assets/icons/dropdown-detail-checked.svg"
+                            alt=""
+                            class="menu-column__icon--img"
+                          />
+                        </div>
+                        <nav class="menu-column__content">
+                          <h3 class="menu-column__title">Savings</h3>
+                          <ul class="menu-column__list">
+                            <li class="details-column__list">Tech Savings</li>
+                            <li class="details-column__list">
+                              Overstock Savings
+                            </li>
+                            <li class="details-column__list">Tech Rollbacks</li>
+                          </ul>
+                        </nav>
+                      </div>
+                      <!-- col-inner-2 -->
+                      <div class="details-column">
+                        <div class="menu-column__icon">
+                          <img
+                            src="./assets/icons/dropdown-detail-hexagon.svg"
+                            alt=""
+                            class="menu-column__icon--shape"
+                          />
+                          <img
+                            src="./assets/icons/dropdown-detail-cellphone.svg"
+                            alt=""
+                            class="menu-column__icon--img"
+                          />
+                        </div>
+                        <nav class="menu-column__content">
+                          <h3 class="menu-column__title">Cell Phones</h3>
+                          <ul class="menu-column__list">
+                            <li class="details-column__list">Wireless Deals</li>
+                            <li class="details-column__list">5G Phones</li>
+                            <li class="details-column__list">
+                              Prepaid Phones & Plans
+                            </li>
+                            <li class="details-column__list">
+                              Refurbished Phones
+                            </li>
+                            <li class="details-column__list">
+                              iPhone Accessories
+                            </li>
+                            <li class="details-column__list">
+                              Cases & Screen Protectors
+                            </li>
+                            <li class="details-column__list">
+                              Walmart Protection Plan
+                            </li>
+                            <li class="details-column__list">
+                              Unlocked Phones
+                            </li>
+                          </ul>
+                        </nav>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </li>
@@ -40,13 +281,6 @@
               class="navbar__arrow icon"
             />
           </a>
-          <div class="drop-down">
-            <div class="drop-down__inner">
-              Lorem 2 ipsum dolor sit amet consectetur, adipisicing elit.
-              Cupiditate possimus, accusamus numquam perferendis vitae fugit ea
-              reprehenderit necessitatibus rem natus!
-            </div>
-          </div>
         </li>
         <li class="navbar__item">
           <a href="" class="navbar__link">
@@ -57,13 +291,6 @@
               class="icon navbar__arrow"
             />
           </a>
-          <div class="drop-down">
-            <div class="drop-down__inner">
-              Lorem 3 ipsum dolor sit amet consectetur, adipisicing elit.
-              Cupiditate possimus, accusamus numquam perferendis vitae fugit ea
-              reprehenderit necessitatibus rem natus!
-            </div>
-          </div>
         </li>
       </ul>
     </nav>
