--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1264,6 +1264,12 @@ html.dark {
     justify-content: space-between;
   }
 }
+@media (max-width: 767.98px) {
+  .top-bar {
+    padding: 1.6rem 0rem;
+    justify-content: space-between;
+  }
+}
 @media (max-width: 991.98px) {
   .top-bar {
     padding: 1.6rem 0rem;
@@ -1323,6 +1329,11 @@ html.dark {
     margin-left: 0;
   }
 }
+@media (max-width: 767.98px) {
+  .top-act {
+    margin-left: 0;
+  }
+}
 .top-act__avatar {
   width: 5rem;
   height: 5rem;
@@ -1335,6 +1346,11 @@ html.dark {
   border-radius: 0.8rem;
 }
 @media (max-width: 575.98px) {
+  .top-act__group {
+    display: none;
+  }
+}
+@media (max-width: 767.98px) {
   .top-act__group {
     display: none;
   }
@@ -1385,6 +1401,11 @@ html.dark {
     margin-left: 0;
   }
 }
+@media (max-width: 767.98px) {
+  .logo {
+    margin-left: 0;
+  }
+}
 .logo__title {
   height: 3.2rem;
   color: var(--text-color);
@@ -1417,11 +1438,10 @@ html.dark {
   background: var(--dropdown-bg-color);
   box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
   height: min(58.2rem, 100vh - 15.8rem);
-  overflow: auto;
 }
 .drop-down__inner::before {
   position: absolute;
-  content: url("../icon/dropdown-arrow.svg");
+  content: url("/assets/icons/dropdown-arrow.svg");
   top: -1.3rem;
   left: var(--arrow-left-pos);
   transform: translateX(-50%);
@@ -1489,6 +1509,15 @@ html.dark {
 .menu-column__list--mb {
   margin-bottom: 1.4rem;
   color: var(--menu-color-text);
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 142.857%;
+}
+.menu-column__list--mb:hover {
+  color: #0071dc;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
 }
 
 .details-column {
