--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -23,6 +23,11 @@
     justify-content: space-between;
   }
 
+  @include abstract.breakpoint(md) {
+    padding: 1.6rem 0rem;
+    justify-content: space-between;
+  }
+
   @include abstract.breakpoint(lg) {
     padding: 1.6rem 0rem;
   }
@@ -89,6 +94,10 @@
     margin-left: 0;
   }
 
+  @include abstract.breakpoint(md) {
+    margin-left: 0;
+  }
+
   &__avatar {
     @include widthHeight(5rem, 5rem);
     border-radius: 0.8rem;
@@ -102,6 +111,10 @@
     border-radius: 0.8rem;
 
     @include abstract.breakpoint(sm) {
+      display: none;
+    }
+
+    @include abstract.breakpoint(md) {
       display: none;
     }
   }
