--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1214,10 +1214,12 @@ html {
   --top-act-shadow-avatar: rgba(0, 0, 0, 0.08);
   --top-act-shadow-btn: rgba(237, 237, 246, 0.2);
   --top-act-separate: #ededf6;
+  --header-shadow: rgba(237, 237, 246, 0.2);
   --dropdown-bg-color: #fff;
   --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
   --top-menu-border: #d2d1d6;
-  --menu-column-action: brightness(0) saturate(100%) invert(7%) sepia(14%) saturate(4579%) hue-rotate(221deg) brightness(91%) contrast(94%);
+  --menu-column-action: brightness(0) saturate(100%) invert(7%) sepia(14%)
+    saturate(4579%) hue-rotate(221deg) brightness(91%) contrast(94%);
 }
 @media (max-width: 575.98px) {
   html {
@@ -1235,6 +1237,7 @@ html.dark {
   --top-act-shadow-avatar: rgba(0, 0, 0, 0.2);
   --top-act-shadow-btn: rgba(0, 0, 0, 0.2);
   --top-act-separate: #ededf6;
+  --header-shadow: rgba(0, 0, 0, 0.2);
   --dropdown-bg-color: #2f3441;
   --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(18%) sepia(8%)
@@ -1252,6 +1255,12 @@ html.dark {
 
 .header {
   background: var(--header-bg-color);
+}
+@media (max-width: 767.98px) {
+  .header {
+    background: #FFF;
+    box-shadow: 0px 20px 60px 10px var(--header-shadow);
+  }
 }
 
 .top-bar {
