--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -12,12 +12,18 @@
 
 .header {
   background: var(--header-bg-color);
+
+  @include abstract.breakpoint(md) {
+    background: #FFF;
+    box-shadow: 0px 20px 60px 10px var(--header-shadow);
+  }
 }
 
 .top-bar {
   @extend %flexItemCenter;
   padding: 3rem 0rem;
   position: relative;
+
   @include abstract.breakpoint(sm) {
     padding: 1.6rem 0rem;
     justify-content: space-between;
