--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1256,9 +1256,9 @@ html.dark {
 .header {
   background: var(--header-bg-color);
 }
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .header {
-    background: #FFF;
+    background: #fff;
     box-shadow: 0px 20px 60px 10px var(--header-shadow);
   }
 }
@@ -1294,11 +1294,11 @@ html.dark {
 }
 
 .navbar {
-  margin-left: 14.4rem;
+  margin-left: 12.9rem;
 }
 @media (max-width: 1199.98px) {
   .navbar {
-    margin-left: 5rem;
+    margin-left: 3rem;
   }
 }
 @media (max-width: 991.98px) {
@@ -1318,12 +1318,6 @@ html.dark {
 .navbar__arrow {
   width: 1.2rem;
   height: 1.2rem;
-}
-.navbar__item:first-child a {
-  padding-left: 0;
-}
-.navbar__item:last-child a {
-  padding-right: 0;
 }
 .navbar__item:hover .drop-down {
   display: block;
@@ -1439,6 +1433,7 @@ html.dark {
   left: 0;
   width: min(124rem, 100%);
   padding-top: 5.4rem;
+  display: none;
 }
 .drop-down__inner {
   position: relative;
@@ -1458,18 +1453,26 @@ html.dark {
 }
 
 .top-menu__details--box {
+  position: absolute;
+  inset: 0 0 0 292px;
   display: flex;
   justify-content: space-between;
-  width: min(82.5rem, 100%);
+  max-width: min(82.5rem, 100%);
+  overflow-y: auto;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s ease-in-out;
 }
 
 .top-menu {
+  position: relative;
   display: flex;
   height: 100%;
 }
 .top-menu__main {
+  overflow-y: auto;
   width: min(29.2rem, 100%);
-  height: 100%;
+  height: calc(100% + 2px);
   border-right: 1px solid var(--top-menu-border);
 }
 .top-menu__details--inner {
@@ -1485,7 +1488,10 @@ html.dark {
 .menu-column {
   display: flex;
   gap: 1.4rem;
-  max-width: 26.2rem;
+  min-width: 26.2rem;
+}
+.menu-column__content {
+  width: min(245px, 100%);
 }
 .menu-column__icon {
   position: relative;
@@ -1522,11 +1528,15 @@ html.dark {
   font-weight: 400;
   line-height: 142.857%;
 }
-.menu-column__list--mb:hover {
+.menu-column__list--mb:hover > a {
   color: #0071dc;
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 142.857%;
+}
+.menu-column__list--mb:hover > .top-menu__details--box {
+  opacity: 1;
+  visibility: visible;
 }
 
 .details-column {
