--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -3,7 +3,7 @@
   left: 0;
   width: min(124rem, 100%);
   padding-top: 5.4rem;
-  // display: none;
+  display: none;
 
   &__inner {
     position: relative;
@@ -25,18 +25,26 @@
 }
 
 .top-menu__details--box {
+  position: absolute;
+  inset: 0 0 0 292px;
   display: flex;
   justify-content: space-between;
-  width: min(82.5rem, 100%);
+  max-width: min(82.5rem, 100%);
+  overflow-y: auto;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s ease-in-out;
 }
 
 .top-menu {
+  position: relative;
   display: flex;
   height: 100%;
 
   &__main {
+    overflow-y: auto;
     width: min(29.2rem, 100%);
-    height: 100%;
+    height: calc(100% + 2px);
     border-right: 1px solid var(--top-menu-border);
   }
 
@@ -55,7 +63,11 @@
 .menu-column {
   display: flex;
   gap: 1.4rem;
-  max-width: 26.2rem;
+  min-width: 26.2rem;
+
+  &__content {
+    width: min(245px, 100%);
+  }
 
   &__icon {
     position: relative;
@@ -96,11 +108,16 @@
       font-weight: 400;
       line-height: 142.857%;
 
-      &:hover {
+      &:hover > a {
         color: #0071dc;
         font-size: 1.4rem;
         font-weight: 500;
         line-height: 142.857%;
+      }
+
+      &:hover > .top-menu__details--box {
+        opacity: 1;
+        visibility: visible;
       }
     }
   }
