--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -13,8 +13,8 @@
 .header {
   background: var(--header-bg-color);
 
-  @include abstract.breakpoint(md) {
-    background: #FFF;
+  @include abstract.breakpoint(lg) {
+    background: #fff;
     box-shadow: 0px 20px 60px 10px var(--header-shadow);
   }
 }
@@ -48,9 +48,10 @@
 }
 
 .navbar {
-  margin-left: 14.4rem;
+  margin-left: 12.9rem;
+
   @include abstract.breakpoint(xl) {
-    margin-left: 5rem;
+    margin-left: 3rem;
   }
 
   @include abstract.breakpoint(lg) {
@@ -77,14 +78,6 @@
   }
 
   &__item {
-    &:first-child a {
-      padding-left: 0;
-    }
-
-    &:last-child a {
-      padding-right: 0;
-    }
-
     &:hover .drop-down {
       display: block;
     }
