--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,7 +14,7 @@
   background: var(--header-bg-color);
 
   @include abstract.breakpoint(lg) {
-    background: #fff;
+    background: var(--header-bg-lg-color);
     box-shadow: 0px 20px 60px 10px var(--header-shadow);
   }
 }
