--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,3 +1,5 @@
+@use "../abstract";
+
 .drop-down {
   position: absolute;
   left: 0;
@@ -73,6 +75,10 @@
     position: relative;
     width: 3.3rem;
 
+    @include abstract.breakpoint(xl) {
+      display: none;
+    }
+
     &--shape {
       position: absolute;
       left: 0;
@@ -102,7 +108,7 @@
     line-height: 142.857%;
 
     &--mb {
-      margin-bottom: 1.4rem;
+      padding: 0.7rem 0rem;
       color: var(--menu-color-text);
       font-size: 1.4rem;
       font-weight: 400;
@@ -139,5 +145,20 @@
     &:last-child {
       margin-bottom: 0;
     }
+  }
+}
+
+.drop-down__inner--od2 {
+  display: grid;
+  grid-template-columns: 211px 209px 182px 1fr;
+  grid-auto-columns: 1fr;
+  gap: 0px 77px;
+  grid-auto-flow: row;
+  justify-items: stretch;
+  width: min(109rem, 100%);
+  height: min(52.2rem, 100%);
+
+  &--ml {
+    margin-left: 0;
   }
 }
