--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -13,7 +13,7 @@
     padding: 3rem;
     background: var(--dropdown-bg-color);
     box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
-    height: min(58.2rem, 100vh - 15.8rem);
+    height: min(60.2rem, 100vh - 15.8rem);
 
     &::before {
       position: absolute;
@@ -48,6 +48,10 @@
     width: min(29.2rem, 100%);
     height: calc(100% + 2px);
     border-right: 1px solid var(--top-menu-border);
+  }
+
+  &__details {
+    height: inherit;
   }
 
   &__details--inner {
@@ -150,13 +154,15 @@
 
 .drop-down__inner--od2 {
   display: grid;
-  grid-template-columns: 211px 209px 182px 1fr;
+  grid-template-columns: 211px 209px 182px 253px;
   grid-auto-columns: 1fr;
   gap: 0px 77px;
   grid-auto-flow: row;
   justify-items: stretch;
   width: min(109rem, 100%);
-  height: min(52.2rem, 100%);
+  height: min(54rem, 100%);
+  overflow-y: auto;
+  overflow-x: hidden;
 
   &--ml {
     margin-left: 0;
