--- a/templates/header.html
+++ b/templates/header.html
@@ -2095,7 +2095,6 @@
             </div>
           </div>
         </li>
-        <!-- ========================= -->
         <li class="navbar__item">
           <a href="" class="navbar__link">
             Grocery
@@ -2295,6 +2294,154 @@
             Beauty
             <img src="./assets/icons/arrow-down.svg" alt="" class="icon navbar__arrow" />
           </a>
+          <div class="drop-down">
+            <div class="drop-down__inner">
+              <div class="drop-down__inner--od2">
+                <!-- Col 1 -->
+                <div class="top-menu__details">
+                  <div class="top-menu__details--inner drop-down__inner--od2--ml">
+                    <!-- col-inner-1 -->
+                    <div class="details-column">
+                      <div class="menu-column__icon">
+                        <img src="./assets/icons/dropdown-shape-square.svg" alt="" class="menu-column__icon--shape" />
+                        <img src="./assets/icons/dropdown-detail-buy.svg" alt="" class="menu-column__icon--img" />
+                      </div>
+                      <nav class="menu-column__content">
+                        <h3 class="menu-column__title">Featured Shops</h3>
+                        <ul class="menu-column__list">
+                          <li class="details-column__list">Pickup Today in Beauty</li>
+                          <li class="details-column__list">BeautySpaceNK</li>
+                          <li class="details-column__list">Equate Beauty</li>
+                          <li class="details-column__list">Beauty Deals</li>
+                          <li class="details-column__list">Walmart Exclusives</li>
+                          <li class="details-column__list">Luxury Beauty Deals</li>
+                          <li class="details-column__list">New Arrivals</li>
+                        </ul>
+                      </nav>
+                    </div>
+                    <!-- col-inner-2 -->
+                    <div class="details-column">
+                      <div class="menu-column__icon">
+                        <img src="./assets/icons/dropdown-shape-yellow-2.svg" alt="" class="menu-column__icon--shape" />
+                        <img src="./assets/icons/dropdown-detail-lipstick.svg" alt="" class="menu-column__icon--img" />
+                      </div>
+                      <nav class="menu-column__content">
+                        <h3 class="menu-column__title">Trending in Beauty</h3>
+                        <ul class="menu-column__list">
+                          <li class="details-column__list">Trending Beauty Products</li>
+                          <li class="details-column__list">Celebrate Earth Day</li>
+                          <li class="details-column__list">Prom-ready Beauty</li>
+                          <li class="details-column__list">Summer Beauty</li>
+                          <li class="details-column__list">Travel Size & Minis</li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+                <!-- Col 2 -->
+                <div class="top-menu__details">
+                  <!-- col-inner-1 -->
+                  <div class="details-column">
+                    <div class="menu-column__icon">
+                      <img src="./assets/icons/dropdown-shape-red-2.svg" alt="" class="menu-column__icon--shape" />
+                      <img src="./assets/icons/dropdown-detail-star-2.svg" alt="" class="menu-column__icon--img" />
+                    </div>
+                    <nav class="menu-column__content">
+                      <h3 class="menu-column__title">Featured Brands</h3>
+                      <ul class="menu-column__list">
+                        <li class="details-column__list">Shop All</li>
+                        <li class="details-column__list">New in Bakery</li>
+                        <li class="details-column__list">Sliced Bread</li>
+                        <li class="details-column__list">Rolls & Buns</li>
+                        <li class="details-column__list">Tortillas</li>
+                        <li class="details-column__list">Breakfast Breads</li>
+                        <li class="details-column__list">Pies</li>
+                        <li class="details-column__list">Cookies & Brownies</li>
+                      </ul>
+                    </nav>
+                  </div>
+                  <!-- col-inner-2 -->
+                  <div class="details-column">
+                    <div class="menu-column__icon">
+                      <img
+                        src="./assets/icons/dropdown-shape-blue-square.svg"
+                        alt=""
+                        class="menu-column__icon--shape"
+                      />
+                      <img src="./assets/icons/dropdown-detail-food.svg" alt="" class="menu-column__icon--img" />
+                    </div>
+                    <nav class="menu-column__content">
+                      <h3 class="menu-column__title">Communities to Support</h3>
+                      <ul class="menu-column__list">
+                        <li class="details-column__list">Black Owned Beauty</li>
+                        <li class="details-column__list">LatinX Owned Beauty</li>
+                        <li class="details-column__list">AAPI Owned Beauty</li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
+                <!-- Col 3 -->
+                <div class="top-menu__details">
+                  <div class="top-menu__details--inner top-menu__details--inner--ml">
+                    <!-- col-inner-1 -->
+                    <div class="details-column">
+                      <div class="menu-column__icon">
+                        <img
+                          src="./assets/icons/dropdown-shape-green-hexagon.svg"
+                          alt=""
+                          class="menu-column__icon--shape"
+                        />
+                        <img src="./assets/icons/dropdown-detail-medal.svg" alt="" class="menu-column__icon--img" />
+                      </div>
+                      <nav class="menu-column__content">
+                        <h3 class="menu-column__title">Snacks</h3>
+                        <ul class="menu-column__list">
+                          <li class="details-column__list">Shop All</li>
+                          <li class="details-column__list">Hair Color</li>
+                          <li class="details-column__list">Hair Care</li>
+                          <li class="details-column__list">Skincare</li>
+                          <li class="details-column__list">Fragrance</li>
+                          <li class="details-column__list">Makeup</li>
+                          <li class="details-column__list">Beauty Tech & Tools</li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+                <!-- col 4 -->
+                <div class="top-menu__details">
+                  <div class="top-menu__details--inner drop-down__inner--od2--ml">
+                    <!-- col-inner-1 -->
+                    <div class="details-column">
+                      <div class="menu-column__icon">
+                        <img
+                          src="./assets/icons/dropdown-shape-yellow-moon.svg"
+                          alt=""
+                          class="menu-column__icon--shape"
+                        />
+                        <img src="./assets/icons/dropdown-detail-face.svg" alt="" class="menu-column__icon--img" />
+                      </div>
+                      <nav class="menu-column__content">
+                        <h3 class="menu-column__title">Beauty</h3>
+                        <ul class="menu-column__list">
+                          <li class="details-column__list">Shop All</li>
+                          <li class="details-column__list">Men's Grooming</li>
+                          <li class="details-column__list">Bath & Body</li>
+                          <li class="details-column__list">Beauty Tech & Tools</li>
+                          <li class="details-column__list">Makeup</li>
+                          <li class="details-column__list">Fragrance</li>
+                          <li class="details-column__list">Nail Care</li>
+                          <li class="details-column__list">Hair Care</li>
+                          <li class="details-column__list">Hair Color</li>
+                          <li class="details-column__list">Skincare</li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </li>
       </ul>
     </nav>
