--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,10 +161,12 @@ button {
   background: transparent;
 }
 
+a,
 button,
 input,
 textarea,
 select {
+  -webkit-tap-highlight-color: transparent;
   font-family: inherit;
   color: inherit;
 }
@@ -1309,7 +1311,49 @@ html.dark {
 }
 @media (max-width: 991.98px) {
   .navbar {
-    display: none;
+    position: fixed;
+    inset: 0 50% 0 0;
+    background: #fff;
+    padding: 2rem 0rem;
+    margin-left: 0;
+    z-index: 9;
+    transform: translateX(-100%);
+    transition: 0.5s;
+  }
+  .navbar.show {
+    transform: translateX(0);
+  }
+  .navbar.show ~ .navbar__overlay {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.navbar__close--btn {
+  display: none;
+}
+@media (max-width: 991.98px) {
+  .navbar__close--btn {
+    display: block;
+    padding: 1rem 4rem;
+  }
+}
+.navbar__overlay {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s, visibility 0.5s;
+}
+@media (max-width: 991.98px) {
+  .navbar__overlay {
+    position: fixed;
+    inset: 0;
+    z-index: 8;
+    background: rgba(0, 0, 0, 0.4);
+  }
+}
+@media (max-width: 991.98px) {
+  .navbar__list {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 .navbar__link {
@@ -1321,12 +1365,28 @@ html.dark {
   line-height: 146.667%;
   color: inherit;
 }
+@media (max-width: 991.98px) {
+  .navbar__link {
+    padding: 0rem 4rem;
+    font-size: 1.6rem;
+    line-height: 150%;
+    justify-content: space-between;
+  }
+}
 .navbar__arrow {
   width: 1.2rem;
   height: 1.2rem;
 }
 .navbar__item:hover .drop-down {
   display: block;
+}
+@media (max-width: 991.98px) {
+  .navbar__item {
+    width: 100%;
+  }
+  .navbar__item:hover .drop-down {
+    display: none;
+  }
 }
 
 .top-act {
