--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1206,6 +1206,92 @@ select {
     --grid-gutter-y: 90px;
   }
 }
+.d-none {
+  display: none !important;
+}
+
+.d-block {
+  display: block !important;
+}
+
+.d-flex {
+  display: flex !important;
+}
+
+.d-grid {
+  display: grid !important;
+}
+
+@media (max-width: 1399.98px) {
+  .d-xxl-none {
+    display: none !important;
+  }
+  .d-xxl-block {
+    display: block !important;
+  }
+  .d-xxl-flex {
+    display: flex !important;
+  }
+  .d-xxl-grid {
+    display: grid !important;
+  }
+}
+@media (max-width: 1199.98px) {
+  .d-xl-none {
+    display: none !important;
+  }
+  .d-xl-block {
+    display: block !important;
+  }
+  .d-xl-flex {
+    display: flex !important;
+  }
+  .d-xl-grid {
+    display: grid !important;
+  }
+}
+@media (max-width: 991.98px) {
+  .d-lg-none {
+    display: none !important;
+  }
+  .d-lg-block {
+    display: block !important;
+  }
+  .d-lg-flex {
+    display: flex !important;
+  }
+  .d-lg-grid {
+    display: grid !important;
+  }
+}
+@media (max-width: 767.98px) {
+  .d-md-none {
+    display: none !important;
+  }
+  .d-md-block {
+    display: block !important;
+  }
+  .d-md-flex {
+    display: flex !important;
+  }
+  .d-md-grid {
+    display: grid !important;
+  }
+}
+@media (max-width: 575.98px) {
+  .d-sm-none {
+    display: none !important;
+  }
+  .d-sm-block {
+    display: block !important;
+  }
+  .d-sm-flex {
+    display: flex !important;
+  }
+  .d-sm-grid {
+    display: grid !important;
+  }
+}
 html {
   --text-color: #1a162e;
   --icon-color: brightness(0) saturate(100%) invert(10%) sepia(34%)
@@ -1292,14 +1378,6 @@ html.dark {
     padding: 1.6rem 0rem;
   }
 }
-.top-bar__more {
-  display: none;
-}
-@media (max-width: 991.98px) {
-  .top-bar__more {
-    display: block;
-  }
-}
 
 .navbar {
   margin-left: 12.9rem;
@@ -1354,6 +1432,8 @@ html.dark {
   .navbar__list {
     flex-direction: column;
     align-items: flex-start;
+    overflow-y: auto;
+    height: calc(100% - 28px);
   }
 }
 .navbar__link {
@@ -1384,9 +1464,6 @@ html.dark {
   .navbar__item {
     width: 100%;
   }
-  .navbar__item:hover .drop-down {
-    display: none;
-  }
 }
 
 .top-act {
@@ -1413,16 +1490,6 @@ html.dark {
 .top-act__group {
   background: var(--top-act-bg-group);
   border-radius: 0.8rem;
-}
-@media (max-width: 575.98px) {
-  .top-act__group {
-    display: none;
-  }
-}
-@media (max-width: 767.98px) {
-  .top-act__group {
-    display: none;
-  }
 }
 .top-act__btn {
   border-radius: 0.8rem;
@@ -1501,6 +1568,13 @@ html.dark {
   padding-top: 5.4rem;
   display: none;
 }
+@media (max-width: 991.98px) {
+  .drop-down {
+    position: initial;
+    display: block;
+    padding-top: 0;
+  }
+}
 .drop-down__inner {
   position: relative;
   border-radius: 2rem;
@@ -1517,6 +1591,18 @@ html.dark {
   transform: translateX(-50%);
   filter: var(--dropdown-arrow-color);
 }
+@media (max-width: 991.98px) {
+  .drop-down__inner {
+    background: transparent;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 0rem 4rem;
+    height: min(52.2rem, 100vh - 15.8rem);
+  }
+  .drop-down__inner::before {
+    content: none;
+  }
+}
 
 .top-menu__details--box {
   position: absolute;
@@ -1529,7 +1615,6 @@ html.dark {
   opacity: 0;
   transition: 0.2s ease-in-out;
 }
-
 .top-menu {
   position: relative;
   display: flex;
@@ -1540,6 +1625,13 @@ html.dark {
   width: min(29.2rem, 100%);
   height: calc(100% + 2px);
   border-right: 1px solid var(--top-menu-border);
+}
+@media (max-width: 991.98px) {
+  .top-menu__main {
+    width: 100%;
+    height: auto;
+    border-right: none;
+  }
 }
 .top-menu__details {
   height: inherit;
@@ -1571,6 +1663,11 @@ html.dark {
     display: none;
   }
 }
+@media (max-width: 991.98px) {
+  .menu-column__icon {
+    display: block;
+  }
+}
 .menu-column__icon--shape {
   position: absolute;
   left: 0;
@@ -1589,6 +1686,11 @@ html.dark {
   line-height: 150%; /* 150% */
   margin-bottom: 2.6rem;
   color: var(--menu-color-text);
+}
+@media (max-width: 991.98px) {
+  .menu-column__title {
+    margin-bottom: 1.5rem;
+  }
 }
 .menu-column__list {
   font-size: 1.4rem;
@@ -1641,6 +1743,11 @@ html.dark {
   height: min(54rem, 100%);
   overflow-y: auto;
   overflow-x: hidden;
+}
+@media (max-width: 991.98px) {
+  .drop-down__inner--od2 {
+    grid-template-columns: 1fr;
+  }
 }
 .drop-down__inner--od2--ml {
   margin-left: 0;
