--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="top-bar">
     <!-- More -->
-    <button class="icon top-bar__more js-toggle" toggle-target="#navbar">
+    <button class="icon top-bar__more d-none d-lg-block js-toggle" toggle-target="#navbar">
       <img src="./assets/icons/more.svg" alt="" class="top-bar__more--icon" />
     </button>
 
@@ -11,9 +11,9 @@
       <h1 class="logo__title">grocerymart</h1>
     </a>
     <!-- Nav bar  -->
-    <nav id="navbar" class="navbar hide">
+    <nav id="navbar" class="navbar show">
       <button class="navbar__close--btn js-toggle" toggle-target="#navbar">
-        <img src="./assets/icons/arrow-left.svg" alt="">
+        <img src="./assets/icons/arrow-left.svg" alt="" />
       </button>
 
       <ul class="navbar__list js-dropdown-list">
@@ -27,12 +27,12 @@
               <div class="top-menu">
                 <div class="top-menu__main">
                   <div class="menu-column">
-                    <div class="menu-column__icon">
+                    <div class="menu-column__icon d-lg-none">
                       <img src="./assets/icons/dropdown-shape-circle.svg" alt="" class="menu-column__icon--shape" />
                       <img src="./assets/icons/dropdown-menu.svg" alt="" class="menu-column__icon--img" />
                     </div>
                     <nav class="menu-column__content">
-                      <h3 class="menu-column__title">All Departments</h3>
+                      <h3 class="menu-column__title d-lg-none">All Departments</h3>
                       <ul class="menu-column__list">
                         <!-- ======Row 1====== -->
                         <li class="menu-column__list--mb">
@@ -2452,13 +2452,13 @@
     <!-- Over lay -->
     <div class="navbar__overlay js-toggle" toggle-target="#navbar"></div>
     <div class="top-act">
-      <div class="top-act__group">
+      <div class="d-md-none top-act__group">
         <button class="top-act__btn top-act__btn--search">
           <img src="./assets/icons/search.svg" alt="" class="top-act__icon icon" />
         </button>
       </div>
 
-      <div class="top-act__group">
+      <div class="d-md-none top-act__group">
         <button class="top-act__btn">
           <img src="./assets/icons/heart.svg" alt="" class="top-act__icon icon" />
           <span class="top-act__title">03</span>
